--- a/food.html
+++ b/food.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="/Templates/HiveMind.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fake site for FBLA Region and State-Utah">
     <link rel="stylesheet" href="CSS/product.css">
     <link rel="shortcut icon" href="img/Logos/favicon.ico" type="image/x-icon">
-    <script src="script.js">
-
-        
-    </script>
-<!-- InstanceBeginEditable name="doctitle" -->
     <title>Hive Mind-Food</title>
-    <!-- InstanceEndEditable -->
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+    <script src="script.js">
+    </script>
+
 </head>
 
 <body>
@@ -82,90 +78,92 @@
         </div>
     </header>
     <!-- InstanceBeginEditable name="Content" -->
+    <section class="cc">
     <div class="row">
-   	<div class="column card">
-<img src="img/Product/alina-karpenko@0.33x.jpg" alt="" style="width:100%">
-                <h1>Cinnamon Muffins</h1>
-                <p class="price">$1.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
+        <div class="column card">
+            <img src="img/Product/alina-karpenko@0.33x.jpg" alt="" style="width:100%">
+            <h1>Cinnamon Muffins</h1>
+            <p class="price">$1.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="column card">
+            <img src="img/Product/american-heritage@0.33x.jpg" alt="" style="width:100%">
+            <h1>Chocolate Cookies</h1>
+            <p class="price">$.99</p>
+            <p>Almonds Inside</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="column card">
+            <img src="img/Product/ari-spada.jpg" alt="" style="width:100%">
+            <h1> Chocolate Muffins</h1>
+            <p class="price">$1.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="column card">
+            <img src="img/Product/fallon-michael.jpg" alt="" style="width:100%">
+            <h1>Cranberry Muffins</h1>
+            <p class="price">$1.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
     </div>
-   	<div class="column card">
-<img src="img/Product/american-heritage@0.33x.jpg" alt="" style="width:100%">
-                <h1>Chocolate Cookies</h1>
-                <p class="price">$.99</p>
-                <p>Almonds Inside</p>
-                <p><button>Add to Cart</button></p>
-    </div>
-   	<div class="column card">
-<img src="img/Product/ari-spada.jpg" alt="" style="width:100%">
-                <h1> Chocolate Muffins</h1>
-                <p class="price">$1.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
-    </div>
-   	<div class="column card">
-<img src="img/Product/fallon-michael.jpg" alt="" style="width:100%">
-                <h1>Cranberry Muffins</h1>
-                <p class="price">$1.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
-    </div>
-</div>
-<div class="row">
+    <div class="row">
 
-   	<div class="column card">
-<img src="img/Product/gayatri-malhotra.jpg" alt="" style="width:100%">
-                <h1>Sugar Cookies</h1>
-                <p class="price">$1.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
+        <div class="column card">
+            <img src="img/Product/gayatri-malhotra.jpg" alt="" style="width:100%">
+            <h1>Sugar Cookies</h1>
+            <p class="price">$1.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="column card">
+            <img src="img/Product/joshua-flores.jpg" alt="" style="width:100%">
+            <h1> Blueberry Muffins</h1>
+            <p class="price">$1.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="column card">
+            <img src="img/Product/madison-kaminski.jpg" alt="" style="width:100%">
+            <h1> PB Blossom</h1>
+            <p class="price">$1.99</p>
+            <p>Hersheys kisses on a peanut butter cookie</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="column card">
+            <img src="img/Product/michael-chiara.jpg" alt="" style="width:100%">
+            <h1> Chocolate Chip</h1>
+            <p class="price">$1.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
     </div>
-   	<div class="column card">
-<img src="img/Product/joshua-flores.jpg" alt="" style="width:100%">
-                <h1> Blueberry Muffins</h1>
-                <p class="price">$1.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
-    </div>
-   	<div class="column card">
-<img src="img/Product/madison-kaminski.jpg" alt="" style="width:100%">
-                <h1> PB Blossom</h1>
-                <p class="price">$1.99</p>
-                <p>Hersheys kisses on a peanut butter cookie</p>
-                <p><button>Add to Cart</button></p>
-    </div>
-   	<div class="column card">
-<img src="img/Product/michael-chiara.jpg" alt="" style="width:100%">
-                <h1> Chocolate Chip</h1>
-                <p class="price">$1.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
-    </div>
-</div>
     <div class="row">
-   	<div class="column card">
-<img src="img/Product/steven-weeks.jpg" alt="" style="width:100%">
-                <h1> Macarons</h1>
-                <p class="price">$1.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
+        <div class="column card">
+            <img src="img/Product/steven-weeks.jpg" alt="" style="width:100%">
+            <h1> Macarons</h1>
+            <p class="price">$1.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="column card">
+            <img src="img/Product/oriol-portell.jpg" alt="" style="width:100%">
+            <h1>Chocolate Muffins</h1>
+            <p class="price">$1.99</p>
+            <p>Double Chocolate</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="column card">
+            <img src="img/Product/pexels-terrance-barksdale-8837096.jpg" alt="" style="width:100%">
+            <h1> Oatmeal Rasian</h1>
+            <p class="price">$1.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
     </div>
-   	<div class="column card">
-<img src="img/Product/oriol-portell.jpg" alt="" style="width:100%">
-                <h1>Chocolate Muffins</h1>
-                <p class="price">$1.99</p>
-                <p>Double Chocolate</p>
-                <p><button>Add to Cart</button></p>
-    </div>
-   	<div class="column card">
-<img src="img/Product/pexels-terrance-barksdale-8837096.jpg" alt="" style="width:100%">
-                <h1> Oatmeal Rasian</h1>
-                <p class="price">$1.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
-    </div>
-</div>
+</section>
     <!-- InstanceEndEditable -->
     <footer>
         <div class="footer-content">
@@ -209,4 +207,6 @@
 
 </body>
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
