--- a/product-page.html
+++ b/product-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="/Templates/HiveMind.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/HiveMind.dwt" codeOutsideHTMLIsLocked="false" -->
 
 <head>
     <meta charset="UTF-8">
@@ -9,13 +10,13 @@
     <link rel="shortcut icon" href="img/Logos/favicon.ico" type="image/x-icon">
     <script src="JS/script.js">
 
-        
+
     </script>
-<!-- InstanceBeginEditable name="doctitle" -->
+    <!-- InstanceBeginEditable name="doctitle" -->
     <title>Hive Mind</title>
     <!-- InstanceEndEditable -->
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
+    <!-- InstanceBeginEditable name="head" -->
+    <!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -25,7 +26,7 @@
             <div class="items">
                 <div class="search">
                     <input type="text" class="search-box" placeholder="Search Product">
-                   <a href="product-page.html"><button class="search-btn"> search</button></a> 
+                    <a href="product-page.html"><button class="search-btn"> search</button></a>
                 </div>
                 <button onclick="document.getElementById('id01').style.display='block'" class="user nav-items"> <img
                         src="img/buttons/user.png" alt=""> </button>
@@ -81,91 +82,91 @@
         </div>
     </header>
     <!-- InstanceBeginEditable name="Content" -->
-        <div class="row">
-            <div class="card column">
-                <img src="img/Product/snapbythree-my-g6e641CiHFQ-unsplash.jpg" alt="Black Coffee" style="width:100%">
-                <h1>Black Coffee</h1>
-                <p class="price">$1.99</p>
-                <p>No Sweetening</p>
-                <p><button>Add to Cart</button></p>
-            </div>
-            <div class="card column">
-                <img src="img/Product/tabitha-turner-F0Wd4djYvSA-unsplash.jpg" alt="Cold Brew" style="width:100%">
-                <h1>Cold Brew</h1>
-                <p class="price">$4.55</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
-            </div>
-            <div class="card column">
-                <img src="img/Product/valeriia-miller-9kIdbW3Fwuo-unsplash.jpg" alt="Latte" style="width:100%">
-                <h1>Latte</h1>
-                <p class="price">$5.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
-            </div>
-            <div class="card column">
-                <img src="img/Product/joshua-flores-5RQffqRkmWQ-unsplash.jpg" alt="">
-                <h1> Blueberry Muffins </h1>
-                <p class="price"> $1.99</p>
-                <p> ...</p>
-                <p><button> Add to Cart</button></p>
-            </div>
+    <div class="row">
+        <div class="card column">
+            <img src="img/Product/snapbythree-my-g6e641CiHFQ-unsplash.jpg" alt="Black Coffee" style="width:100%">
+            <h1>Black Coffee</h1>
+            <p class="price">$1.99</p>
+            <p>No Sweetening</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="card column">
+            <img src="img/Product/tabitha-turner-F0Wd4djYvSA-unsplash.jpg" alt="Cold Brew" style="width:100%">
+            <h1>Cold Brew</h1>
+            <p class="price">$4.55</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="card column">
+            <img src="img/Product/valeriia-miller-9kIdbW3Fwuo-unsplash.jpg" alt="Latte" style="width:100%">
+            <h1>Latte</h1>
+            <p class="price">$5.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="card column">
+            <img src="img/Product/joshua-flores-5RQffqRkmWQ-unsplash.jpg" alt="">
+            <h1> Blueberry Muffins </h1>
+            <p class="price"> $1.99</p>
+            <p> ...</p>
+            <p><button> Add to Cart</button></p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="card column">
+            <img src="img/Product/ann-74NChp1cn5I-unsplash.jpg" alt="Latte" style="width:100%">
+            <h1>Matcha Tea</h1>
+            <p class="price">$5.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="card column">
+            <img src="img/Product/akhilesh-sharma-6xtK1Pn-PTI-unsplash.jpg" alt="Sweet Tea" style="width:100%">
+            <h1>Sweet Tea</h1>
+            <p class="price">$3.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="card column">
+            <img src="img/Product/manki-kim-L82-kkEBOd0-unsplash.jpg" alt="Black Tea" style="width:100%">
+            <h1>Black Tea</h1>
+            <p class="price">$3.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+        <div class="card column">
+            <img src="img/Product/yana-bhKdRjYJ1CA-unsplash.jpg" alt="Sweet Tea" style="width:100%">
+            <h1> Tea</h1>
+            <p class="price">$3.99</p>
+            <p>...</p>
+            <p><button>Add to Cart</button></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="card column">
+            <img src="img/Product/alina-karpenko-d8GDJalt_BE-unsplash.jpg" alt="">
+            <h1> Cinnamon Muffins </h1>
+            <p class="price"> $2.50</p>
+            <p> ...</p>
+            <p><button> Add to Cart</button></p>
+        </div>
+        <div class="card column">
+            <img src="img/Product/ari-spada-RCYrA-AiFSo-unsplash.jpg" alt="">
+            <h1> Chocolate Muffins</h1>
+            <p class="price"> $1.99</p>
+            <p>Double Chocolate</p>
+            <p><button> Add to Cart</button></p>
+        </div>
+        <div class="card column">
+            <img src="img/Product/fallon-michael-0-xIKrdFj4I-unsplash.jpg" alt="">
+            <h1> Cranberry Muffins </h1>
+            <p class="price"> $2.50</p>
+            <p> ...</p>
+            <p><button> Add to Cart</button></p>
         </div>
 
-        <div class="row">
-            <div class="card column">
-                <img src="img/Product/ann-74NChp1cn5I-unsplash.jpg" alt="Latte" style="width:100%">
-                <h1>Matcha Tea</h1>
-                <p class="price">$5.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
-            </div>
-            <div class="card column">
-                <img src="img/Product/akhilesh-sharma-6xtK1Pn-PTI-unsplash.jpg" alt="Sweet Tea" style="width:100%">
-                <h1>Sweet Tea</h1>
-                <p class="price">$3.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
-            </div>
-            <div class="card column">
-                <img src="img/Product/manki-kim-L82-kkEBOd0-unsplash.jpg" alt="Black Tea" style="width:100%">
-                <h1>Black Tea</h1>
-                <p class="price">$3.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
-            </div>
-            <div class="card column">
-                <img src="img/Product/yana-bhKdRjYJ1CA-unsplash.jpg" alt="Sweet Tea" style="width:100%">
-                <h1> Tea</h1>
-                <p class="price">$3.99</p>
-                <p>...</p>
-                <p><button>Add to Cart</button></p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="card column">
-                <img src="img/Product/alina-karpenko-d8GDJalt_BE-unsplash.jpg" alt="">
-                <h1> Cinnamon Muffins </h1>
-                <p class="price"> $2.50</p>
-                <p> ...</p>
-                <p><button> Add to Cart</button></p>
-            </div>
-            <div class="card column">
-                <img src="img/Product/ari-spada-RCYrA-AiFSo-unsplash.jpg" alt="">
-                <h1> Chocolate Muffins</h1>
-                <p class="price"> $1.99</p>
-                <p>Double Chocolate</p>
-                <p><button> Add to Cart</button></p>
-            </div>
-            <div class="card column">
-                <img src="img/Product/fallon-michael-0-xIKrdFj4I-unsplash.jpg" alt="">
-                <h1> Cranberry Muffins </h1>
-                <p class="price"> $2.50</p>
-                <p> ...</p>
-                <p><button> Add to Cart</button></p>
-            </div>
-           
-        </div>
+    </div>
 
     <!-- InstanceEndEditable -->
     <footer>
@@ -210,4 +211,6 @@
 
 </body>
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
