--- a/credit.html
+++ b/credit.html
@@ -57,103 +57,103 @@
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext"> 1 / 20</div> 
-                <img src="img/Product/akhilesh-sharma.jpg" style="width:100%">
+                <img src="img/Product/akhilesh-sharma.avif" style="width:100%">
                 <div class="text"> Akhilesh Sharma</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext"> 2 / 20</div> 
-                <img src="img/Product/alina-karpenko@0.33x.jpg" style="width:100%">
+                <img src="img/Product/alina-karpenko@0.33x.avif" style="width:100%">
                 <div class="text">Alina Karpenko</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 3 / 20</div> 
-                <img src="img/Product/american-heritage@0.33x.jpg" style="width:100%">
+                <img src="img/Product/american-heritage@0.33x.avif" style="width:100%">
                 <div class="text">American Heritage Chocolate</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 4 / 20</div> 
-                <img src="img/Product/ann.jpg" style="width:100%">
+                <img src="img/Product/ann.avif" style="width:100%">
                 <div class="text"> Ann</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 5 / 20</div> 
-                <img src="img/Product/ari-spada.jpg" style="width:100%">
+                <img src="img/Product/ari-spada.avif" style="width:100%">
                 <div class="text"> Ari Spada</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 6 / 20</div> 
-                <img src="img/Product//fallon-michael.jpg" style="width:100%">
+                <img src="img/Product//fallon-michael.avif" style="width:100%">
                 <div class="text"> Fallon Micheal</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 7 / 20</div> 
-                <img src="img/Product/gayatri-malhotra.jpg" style="width:100%">
+                <img src="img/Product/gayatri-malhotra.avif" style="width:100%">
                 <div class="text"> Gayatri Malhorta</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 8 / 20</div> 
-                <img src="img/Product/joshua-flores.jpg" style="width:100%">
+                <img src="img/Product/joshua-flores.avif" style="width:100%">
                 <div class="text"> Joshua Flores</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 9 / 20</div> 
-                <img src="img/Product/karl-fredrickson.jpg" style="width:100%">
+                <img src="img/Product/karl-fredrickson.avif" style="width:100%">
                 <div class="text"> Karl Fredrickson</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 10 / 20</div> 
-                <img src="img/Product/madison-kaminski.jpg" style="width:100%">
+                <img src="img/Product/madison-kaminski.avif" style="width:100%">
                 <div class="text"> Madison Kaminski</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 11 / 20</div> 
-                <img src="img/Product/manki-kim.jpg" style="width:100%">
+                <img src="img/Product/manki-kim.avif" style="width:100%">
                 <div class="text"> Manki Kim</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 12 / 20</div> 
-                <img src="img/Product/michael-chiara.jpg" style="width:100%">
+                <img src="img/Product/michael-chiara.avif" style="width:100%">
                 <div class="text"> Micheal Chiara</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 13 / 20</div> 
-                <img src="img/Product/oriol-portell.jpg" style="width:100%">
+                <img src="img/Product/oriol-portell.avif" style="width:100%">
                 <div class="text"> Oriol Portell</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 14 / 20</div> 
-                <img src="img/Product/pablo-merchan-montes.jpg" style="width:100%">
+                <img src="img/Product/pablo-merchan-montes.avif" style="width:100%">
                 <div class="text"> Pablo Merchan Montes</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 15 / 20</div> 
-                <img src="img/Product/pexels-terrance-barksdale-8837096.jpg" style="width:100%">
+                <img src="img/Product/pexels-terrance-barksdale-8837096.avif" style="width:100%">
                 <div class="text"> Pexels Terrence Barksdale</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 16 / 20</div> 
-                <img src="img/Product/snapbythree.jpg" style="width:100%">
+                <img src="img/Product/snapbythree.avif" style="width:100%">
                 <div class="text"> "SnapbytThree"</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 17 / 20</div> 
-                <img src="img/Product/steven-weeks.jpg" style="width:100%">
+                <img src="img/Product/steven-weeks.avif" style="width:100%">
                 <div class="text"> Steven Weeks</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 18 / 20</div> 
-                <img src="img/Product/tabitha-turner.jpg" style="width:100%">
+                <img src="img/Product/tabitha-turner.avif" style="width:100%">
                 <div class="text"> Tabitha Turner</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 19 / 20</div> 
-                <img src="img/Product/valeriia-miller.jpg" style="width:100%">
+                <img src="img/Product/valeriia-miller.avif" style="width:100%">
                 <div class="text"> Valeriia Miller</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext"> 20 / 20</div> 
-                <img src="img/Product/yana.jpg" style="width:100%">
+                <img src="img/Product/yana.avif" style="width:100%">
                 <div class="text"> Yana</div>
             </div>
 
