--- a/food.html
+++ b/food.html
@@ -81,28 +81,28 @@
     <section class="cc">
     <div class="row">
         <div class="column card">
-            <img src="img/Product/alina-karpenko@0.33x.jpg" alt="" style="width:100%">
+            <img src="img/Product/alina-karpenko@0.33x.avif" alt="" style="width:100%">
             <h1>Cinnamon Muffins</h1>
             <p class="price">$1.99</p>
             <p>...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
-            <img src="img/Product/american-heritage@0.33x.jpg" alt="" style="width:100%">
+            <img src="img/Product/american-heritage@0.33x.avif" alt="" style="width:100%">
             <h1>Chocolate Cookies</h1>
             <p class="price">$.99</p>
             <p>Almonds Inside</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
-            <img src="img/Product/ari-spada.jpg" alt="" style="width:100%">
+            <img src="img/Product/ari-spada.avif" alt="" style="width:100%">
             <h1> Chocolate Muffins</h1>
             <p class="price">$1.99</p>
             <p>...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
-            <img src="img/Product/fallon-michael.jpg" alt="" style="width:100%">
+            <img src="img/Product/fallon-michael.avif" alt="" style="width:100%">
             <h1>Cranberry Muffins</h1>
             <p class="price">$1.99</p>
             <p>...</p>
@@ -112,28 +112,28 @@
     <div class="row">
 
         <div class="column card">
-            <img src="img/Product/gayatri-malhotra.jpg" alt="" style="width:100%">
+            <img src="img/Product/gayatri-malhotra.avif" alt="" style="width:100%">
             <h1>Sugar Cookies</h1>
             <p class="price">$1.99</p>
             <p>...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
-            <img src="img/Product/joshua-flores.jpg" alt="" style="width:100%">
+            <img src="img/Product/joshua-flores.avif" alt="" style="width:100%">
             <h1> Blueberry Muffins</h1>
             <p class="price">$1.99</p>
             <p>...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
-            <img src="img/Product/madison-kaminski.jpg" alt="" style="width:100%">
+            <img src="img/Product/madison-kaminski.avif" alt="" style="width:100%">
             <h1> PB Blossom</h1>
             <p class="price">$1.99</p>
             <p>Hersheys kisses on a peanut butter cookie</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
-            <img src="img/Product/michael-chiara.jpg" alt="" style="width:100%">
+            <img src="img/Product/michael-chiara.avif" alt="" style="width:100%">
             <h1> Chocolate Chip</h1>
             <p class="price">$1.99</p>
             <p>...</p>
@@ -142,21 +142,21 @@
     </div>
     <div class="row">
         <div class="column card">
-            <img src="img/Product/steven-weeks.jpg" alt="" style="width:100%">
+            <img src="img/Product/steven-weeks.avif" alt="" style="width:100%">
             <h1> Macarons</h1>
             <p class="price">$1.99</p>
             <p>...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
-            <img src="img/Product/oriol-portell.jpg" alt="" style="width:100%">
+            <img src="img/Product/oriol-portell.avif" alt="" style="width:100%">
             <h1>Chocolate Muffins</h1>
             <p class="price">$1.99</p>
             <p>Double Chocolate</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
-            <img src="img/Product/pexels-terrance-barksdale-8837096.jpg" alt="" style="width:100%">
+            <img src="img/Product/pexels-terrance-barksdale-8837096.avif" alt="" style="width:100%">
             <h1> Oatmeal Rasian</h1>
             <p class="price">$1.99</p>
             <p>...</p>
