Fixing more images, and adding coffee and tea pages

--- a/error.html
+++ b/error.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oops!</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <style>
+        p {    color:#261f1d;    
+font-weight: 900;    
+font-size: 20px;    
+font-family: Helvetica, Arial, sans-serif;   
+text-align: center; 
+}
+a img{
+    text-align: center;
+}
+    </style>
 </head>
 <body>
     <nav id="top" class="navbar">
@@ -54,9 +65,10 @@
     </nav>
 
     <section class="error">
-        <img src="#" alt="">
-        <h2> Oops!</h2>
+        <a href="index.html"><img src="img/Logos/error.avif"></a>
+        <div>
         <p> Theres nothing to see here! This website is unfinished!</p>
-    </section>
+        <p> Click <a href="index.html">Here</a> to go back!</p>
+   </div> </section>
 </body>
 </html>
