--- a/food.html
+++ b/food.html
@@ -17,7 +17,7 @@
 <body>
     <nav id="top" class="navbar">
         <section class="nav">
-            <img src="img/Logos/HivemindLogo.png" class="brand-logo" alt="">
+            <img src="img/Logos/HivemindLogo.avif" class="brand-logo" alt="">
             <div class="items">
                 <div class="search">
                     <input type="text" class="search-box" placeholder="Search Product">
@@ -65,8 +65,8 @@
         <hr>
         <ul class="link-container">
             <li class="link-item"> <a class="tab-link" href="index.html"> Home</a> </li>
-            <li class="link-item"> <a class="tab-link" href="#"> Coffee</a> </li>
-            <li class="link-item"> <a class="tab-link" href="#"> Tea</a></li>
+            <li class="link-item"> <a class="tab-link" href="error.html"> Coffee</a> </li>
+            <li class="link-item"> <a class="tab-link" href="error.html"> Tea</a></li>
             <li class="link-item"> <a class="tab-link" href="food.html"> Food </a></li>
         </ul>
     </nav>
@@ -167,21 +167,10 @@
     <!-- InstanceEndEditable -->
     <footer>
         <div class="footer-content">
-            <img src="img/Logos/HivemindLogo.png" class="logo" alt="Light Logo">
+            <img src="img/Logos/HivemindLogo.avif" class="logo" alt="Light Logo">
             <div class="footer-ul-container">
                 <ul class="category">
-                    <li class="category-title"> <button class="category-link, link-item"
-                            onclick="openPage('Coffee', this)">Coffee</button></li>
-                </ul>
-                <br>
-                <ul class="category">
-                    <li class="category-title"> <button class="category-link, link-item"
-                            onclick="openPage('Tea', this)">Tea</button></li>
-                </ul>
-                <br>
-                <ul class="category">
-                    <li class="category-title"> <button class="category-link, link-item"
-                            onclick="openPage('Food', this)">Food</button> </li>
+                   
                 </ul>
             </div>
         </div>
@@ -196,7 +185,7 @@
             <a href="#top" class="social-link"> Back To Top</a>
         </div>
         <p class="footer-credit"> This website was made by Arlo Jackson starting on October 11, 2022. All images were
-            found on Unsplash, <a href="credit.html">here is credit</a> to them all.
+            found on<dfn title="The photos on Unsplash are free to use and can be used for most commercial, personal projects, and for editorial use. You do not need to ask permission from or provide credit to the photographer or Unsplash, although it is appreciated when possible."> Unsplash,</dfn> <a href="credit.html">here is credit</a> to them all.
         </p>
         <br>
         <br>
