--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <body>
     <nav id="top" class="navbar">
         <section class="nav">
-            <img src="img/Logos/HivemindLogo.png" class="brand-logo" alt="">
+            <img src="img/Logos/HivemindLogo.avif" class="brand-logo" alt="">
             <div class="items">
                 <div class="search">
                     <input type="text" class="search-box" placeholder="Search Product">
                     <button class="search-btn"> search</button>
                 </div>
                 <button onclick="document.getElementById('id01').style.display='block'" class="user nav-items"> <img
-                        src="img/buttons/user.png" alt=""> </button>
+                        src="img/buttons/user.png" alt="Profile"> </button>
                 <!-- Starts of the sign up form-->
                 <div id="id01" class="modal">
                     <span onclick="document.getElementById('id01').style.display='none'" class="close"
@@ -49,20 +49,20 @@
                     </form>
                 </div>
                 <!-- End Sign up form-->
-                <a href="#" class="nav-items"> <img src="img/buttons/cart.png" alt=""></a>
+                <a href="error.html" class="nav-items"> <img src="img/buttons/cart.png" alt="Cart"></a>
             </div>
         </section>
         <hr>
         <ul class="link-container">
             <li class="link-item"> <a class="tab-link" href="index.html"> Home</a> </li>
-            <li class="link-item"> <a class="tab-link" href="#"> Coffee</a> </li>
-            <li class="link-item"> <a class="tab-link" href="#"> Tea</a></li>
+            <li class="link-item"> <a class="tab-link" href="coffee.html"> Coffee</a> </li>
+            <li class="link-item"> <a class="tab-link" href="error.html"> Tea</a></li>
             <li class="link-item"> <a class="tab-link" href="food.html"> Food </a></li>
         </ul>
     </nav>
     <!-- Nav End-->
     <header class="hero-section">
-        <img src="img/Logos/logo-header.png" alt="" class="logo">
+        <img src="img/Logos/logo-header.avif" alt="" class="logo">
         <div class="content">
             <h4 class="sub-heading"> Sweetest In Utah</h4>
         </div>
@@ -156,8 +156,8 @@
                     <span class="price">$3.99</span><span class="actual-price"></span>
                 </div>
             </div>
-            <button class="pre-btn"><img src="img/buttons/arrow.png" alt=""></button>
-            <button class="nxt-btn"><img src="img/buttons/arrow.png" alt=""></button>
+            <button class="pre-btn"><img src="img/buttons/arrow.png" alt="Back Button"></button>
+            <button class="nxt-btn"><img src="img/buttons/arrow.png" alt="Next Button"></button>
             <script>
                 const productContainer = [...document.querySelectorAll('.product-container')];
                 const nxtBt = [...document.querySelectorAll('.nxt-btn')];
@@ -183,25 +183,25 @@
     <hr class="footer-collection">
     <section class="collection-container">
         <a href="coffee.html" class="collection">
-            <img src="img/Product/tabitha-turner.avif" alt="">
+            <img src="img/Product/tabitha-turner.avif" alt="Coffee">
         </a>
         <a href="#" class="collection">
-            <img src="img/Product/yana.avif" alt="">
+            <img src="img/Product/yana.avif" alt="Tea">
         </a>
         <a href="food.html" class="collection">
-            <img src="img/Product/ari-spada.avif" alt="">
+            <img src="img/Product/ari-spada.avif" alt="Food">
         </a>
         <a href="#" class="collection">
-            <img src="img/Product/pablo-merchan-montes.avif" alt="">
+            <img src="img/Product/pablo-merchan-montes.avif" alt="Beans">
         </a>
-        <a href="#" class="collection">
+        <a href="#" class="collection" alt="Empty">
         </a>
     </section>
     </div>
 
     <footer>
         <div class="footer-content">
-            <img src="img/Logos/HivemindLogo.png" class="logo" alt="Light Logo">
+            <img src="img/Logos/HivemindLogo.avif" class="logo" alt="Light Logo">
             <div class="footer-ul-container">
                 <ul class="category">
                    
@@ -219,7 +219,7 @@
             <a href="#top" class="social-link"> Back To Top</a>
         </div>
         <p class="footer-credit"> This website was made by Arlo Jackson starting on October 11, 2022. All images were
-            found on Unsplash, <a href="credit.html">here is credit</a> to them all.
+            found on <dfn title="The photos on Unsplash are free to use and can be used for most commercial, personal projects, and for editorial use. You do not need to ask permission from or provide credit to the photographer or Unsplash, although it is appreciated when possible."> Unsplash,</dfn> <a href="credit.html">here is credit</a> to them all.
         </p>
         <br>
         <br>
