--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <ul class="link-container">
             <li class="link-item"> <a class="tab-link" href="index.html"> Home</a> </li>
             <li class="link-item"> <a class="tab-link" href="coffee.html"> Coffee</a> </li>
-            <li class="link-item"> <a class="tab-link" href="error.html"> Tea</a></li>
+            <li class="link-item"> <a class="tab-link" href="tea.html"> Tea</a></li>
             <li class="link-item"> <a class="tab-link" href="food.html"> Food </a></li>
         </ul>
     </nav>
