--- a/tea.html
+++ b/tea.html
@@ -65,8 +65,8 @@
         <hr>
         <ul class="link-container">
             <li class="link-item"> <a class="tab-link" href="index.html"> Home</a> </li>
-            <li class="link-item"> <a class="tab-link" href="error.html"> Coffee</a> </li>
-            <li class="link-item"> <a class="tab-link" href="error.html"> Tea</a></li>
+            <li class="link-item"> <a class="tab-link" href="coffee.html"> Coffee</a> </li>
+            <li class="link-item"> <a class="tab-link" href="tea.html"> Tea</a></li>
             <li class="link-item"> <a class="tab-link" href="food.html"> Food </a></li>
         </ul>
     </nav>
@@ -81,84 +81,23 @@
     <section class="cc">
     <div class="row">
         <div class="column card">
-            <img src="img/Product/alina-karpenko@0.33x.avif" alt="" style="width:100%">
-            <h1>Cinnamon Muffins</h1>
-            <p class="price">$1.99</p>
+            <img src="img/Product/ann.avif" alt="" style="width:100%">
+            <h1>Mathca Tea</h1>
+            <p class="price">$5.99</p>
             <p>...</p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
-            <img src="img/Product/american-heritage@0.33x.avif" alt="" style="width:100%">
-            <h1>Chocolate Cookies</h1>
-            <p class="price">$.99</p>
-            <p>Almonds Inside</p>
+            <img src="img/Product/manki-kim.avif" alt="" style="width:100%">
+            <h1>Sweet Tea</h1>
+            <p class="price">$3.99</p>
+            <p></p>
             <p><button>Add to Cart</button></p>
         </div>
         <div class="column card">
-            <img src="img/Product/ari-spada.avif" alt="" style="width:100%">
-            <h1> Chocolate Muffins</h1>
-            <p class="price">$1.99</p>
-            <p>...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-        <div class="column card">
-            <img src="img/Product/fallon-michael.avif" alt="" style="width:100%">
-            <h1>Cranberry Muffins</h1>
-            <p class="price">$1.99</p>
-            <p>...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-    </div>
-    <div class="row">
-
-        <div class="column card">
-            <img src="img/Product/gayatri-malhotra.avif" alt="" style="width:100%">
-            <h1>Sugar Cookies</h1>
-            <p class="price">$1.99</p>
-            <p>...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-        <div class="column card">
-            <img src="img/Product/joshua-flores.avif" alt="" style="width:100%">
-            <h1> Blueberry Muffins</h1>
-            <p class="price">$1.99</p>
-            <p>...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-        <div class="column card">
-            <img src="img/Product/madison-kaminski.avif" alt="" style="width:100%">
-            <h1> PB Blossom</h1>
-            <p class="price">$1.99</p>
-            <p>Hersheys kisses on a peanut butter cookie</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-        <div class="column card">
-            <img src="img/Product/michael-chiara.avif" alt="" style="width:100%">
-            <h1> Chocolate Chip</h1>
-            <p class="price">$1.99</p>
-            <p>...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column card">
-            <img src="img/Product/steven-weeks.avif" alt="" style="width:100%">
-            <h1> Macarons</h1>
-            <p class="price">$1.99</p>
-            <p>...</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-        <div class="column card">
-            <img src="img/Product/oriol-portell.avif" alt="" style="width:100%">
-            <h1>Chocolate Muffins</h1>
-            <p class="price">$1.99</p>
-            <p>Double Chocolate</p>
-            <p><button>Add to Cart</button></p>
-        </div>
-        <div class="column card">
-            <img src="img/Product/pexels-terrance-barksdale-8837096.avif" alt="" style="width:100%">
-            <h1> Oatmeal Rasian</h1>
-            <p class="price">$1.99</p>
+            <img src="img/Product/akhilesh-sharma.avif" alt="" style="width:100%">
+            <h1>Black Tea</h1>
+            <p class="price">$3.99</p>
             <p>...</p>
             <p><button>Add to Cart</button></p>
         </div>
