--- a/coffee.html
+++ b/coffee.html
@@ -31,7 +31,7 @@
                         title="Close">x</span>
                     <form class="modal-content" action="#">
                         <div class="container">
-                            <img src="img/Logos/HivemindLogo.png" class="logo" alt="">
+                            <img src="img/Logos/HivemindLogo.avif" class="logo" alt="">
                             <div>
                                 <h2> Sign Up</h2>
                                 <p> Please Fill out this Form to Create An Account</p>
