--- a/credit.html
+++ b/credit.html
@@ -10,7 +10,7 @@
 <body>
     <nav id="top" class="navbar">
         <section class="nav">
-            <img src="img/Logos/HivemindLogo.png" class="brand-logo" alt="">
+            <img src="img/Logos/HivemindLogo.avif" class="brand-logo" alt="">
             <div class="items">
                 <div class="search">
                     <input type="text" class="search-box" placeholder="Search Product">
@@ -24,7 +24,7 @@
                         title="Close">x</span>
                     <form class="modal-content" action="#">
                         <div class="container">
-                            <img src="img/Logos/HivemindLogo.png" class="logo" alt="">
+                            <img src="img/Logos/HivemindLogo.avif" class="logo" alt="">
                             <div>
                                 <h2> Sign Up</h2>
                                 <p> Please Fill out this Form to Create An Account</p>
@@ -217,22 +217,9 @@ function showSlides(n) {
     
     <footer>
         <div class="footer-content">
-            <img src="img/Logos/HivemindLogo.png" class="logo" alt="Light Logo">
+            <img src="img/Logos/HivemindLogo.avif" class="logo" alt="Light Logo">
             <div class="footer-ul-container">
-                <ul class="category">
-                    <li class="category-title"> <button class="category-link, link-item"
-                            onclick="openPage('Coffee', this)">Coffee</button></li>
-                </ul>
-                <br>
-                <ul class="category">
-                    <li class="category-title"> <button class="category-link, link-item"
-                            onclick="openPage('Tea', this)">Tea</button></li>
-                </ul>
-                <br>
-                <ul class="category">
-                    <li class="category-title"> <button class="category-link, link-item"
-                            onclick="openPage('Food', this)">Food</button> </li>
-                </ul>
+                
             </div>
         </div>
 
