--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fake site for FBLA Region and State-Utah">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/product.css">
     <link rel="shortcut icon" href="img/Logos/favicon.ico" type="image/x-icon">
     <script src="script.js">
     </script>
@@ -69,21 +69,8 @@
     </header>
     <!-- Weeks Top Seller: Start-->
     <section class="product">
-        <h2 class="best-seller"> This Weeks Best Sellers</h2>
+        <h2 style="text-align: center; font-size:xx-large ;"> Best Sellers</h2>
         <section class="product-container">
-
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag"></span>
-                    <img src="img/Product/joshua-flores.avif" class="product-thumb" alt="" height="110" width="165">
-                    <button class="card-btn add-to-cart" data-id="1">Add to cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Blueberry Muffin</h2>
-                    <p class="product-short-des"></p>
-                    <span class="card-price">$3.99</span><span class="actual-price"></span>
-                </div>
-            </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
